[package]
name = "jambrush"
version = "0.1.0"
authors = ["Claire Harris <wishing.engine@gmail.com>"]
edition = "2018"

[features]
default = []
opengl = ["gfx-backend-gl"]
dx11 = ["gfx-backend-dx11"]
cli = ["structopt", "shaderc"]
web = ["opengl", "winit/web-sys"]

[[bin]]
name = "main"
required-features = ["cli"]
path = "src/main.rs"

[dependencies]
gfx-hal = "=0.6.0"
image = "~0.23.12"
shaderc = { version="=0.7.0", optional = true }
structopt = { version="~0.3.15", optional = true }
texture_packer = "~0.21.0"
winit = "=0.22.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.55"
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.6"
features = [ "console", "Document", "Element", "HtmlElement", "Node", "Window" ]

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
version = "=0.6.4"

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "=0.6.13"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies.gfx-backend-vulkan]
version = "=0.6.5"

[dependencies.gfx-backend-gl]
optional = true
version = "=0.6.1"

[dependencies.gfx-backend-dx11]
optional = true
version = "=0.6.15"

[dependencies.rusttype]
features = ["gpu_cache"]
version = "~0.7.2"
