[package]
name = "jambrush"
version = "0.1.0"
authors = ["Vi <violet@hey.com>"]
edition = "2018"

[features]
default = []
opengl = ["gfx-backend-gl"]
dx11 = ["gfx-backend-dx11"]
cli = ["structopt", "shaderc"]

[dependencies]
gfx-hal = "=0.5.0"
image = "~0.23.2"
shaderc = { version="=0.6.2", optional = true }
structopt = { version="~0.3.15", optional = true }
texture_packer = "~0.21.0"
winit = "=0.21.0"

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
version = "=0.5.1"

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "=0.5.0"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies.gfx-backend-vulkan]
version = "=0.5.1"

[dependencies.gfx-backend-gl]
optional = true
version = "=0.5.0"
features = ["glutin"]

[dependencies.gfx-backend-dx11]
optional = true
version = "=0.5.0"

[dependencies.rusttype]
features = ["gpu_cache"]
version = "~0.7.2"
